--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ theme: minima
 author: Layla Sheikh
 email: laylasheikh9@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  View Layla's work and read about her upcoming projects :)
+  View Layla's work and read about her upcoming projects :)  ..
 
 # social links
 instagram_username: laylasheikh
