--- a/_config.yml
+++ b/_config.yml
@@ -10,4 +10,4 @@ instagram_username: laylasheikh
 github_username:  laylasheikh
 tiktok_username: laylasheikh
 
-show_excerpts: true # set to false to remove excerpts on the homepage
+show_excerpts: true
